--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/iview.min.js"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/screenfull.js"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/SimpleCrypto.min.js"></script>
+    <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/gwm.umd.js"></script>
     <script type="text/javascript" src="https://apis.map.qq.com/ws/location/v1/ip?key=3BFBZ-ZKD3X-LW54A-ZT76D-E7AHO-4RBD5&&output=jsonp&callback=queryLocationInfo"></script>
 </head>
 
