--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/Sortable.min.js"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/xeditor.min.js"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/nutui.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/@jiaminghi/data-view/dist/datav.min.vue.js"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/FileSaver.min.js"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/betools.dev.js?version=v3.5.4"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/fastclick.js"></script>
@@ -72,6 +73,7 @@
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/screenfull.js"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/SimpleCrypto.min.js"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/gwm.umd.js"></script>
+    
     <script async type="text/javascript" src="https://apis.map.qq.com/ws/location/v1/ip?key=3BFBZ-ZKD3X-LW54A-ZT76D-E7AHO-4RBD5&&output=jsonp&callback=queryLocationInfo"></script>
 </head>
 
