--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/nutui.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/@jiaminghi/data-view/dist/datav.min.vue.js"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/FileSaver.min.js"></script>
-    <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/betools.dev.js?version=v3.5.0&system=legal"></script>
+    <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/betools.dev.js?version=v3.5.3&system=legal&tail=20210910"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/fastclick.js"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/fp.min.js"></script>
     <script type="text/javascript" src="https://wechat.yunwisdom.club:30443/script/vconsole.min.js"></script>
